change topping to product with type
