# src/controllers/index.ts
@@ -1,3 +1,3 @@
 export * from './ping.controller';
 export * from './order.controller';
-export * from './topping.controller';
+export * from './product.controller';
