# src/models/index.ts
@@ -1,3 +1,3 @@
 export * from './order.model';
-export * from './topping.model';
+export * from './product.model';
 export * from './order-item.model';
